--- a/fb/fbclear.1
+++ b/fb/fbclear.1
@@ -1,32 +1,26 @@
-.TH FBCLEAR 1V VMB
-'\"	last edit:	85/04/22	G. S. Moss
-'\"	SCCS ID:	@(#)fbclear.1	1.2
+.TH FBCLEAR 1 BRL/CAD
 .SH NAME
 fbclear \- clear a frame buffer image
 .SH SYNOPSIS
 .B fbclear
-[
-.B \-h
-] [
-.B red green blue
-]
+.RB [ \-h ]
+[red green blue]
 .SH DESCRIPTION
-.B Fbclear
+.I Fbclear
 is used to erase a frame buffer using whatever method is efficient for the
 device being accessed.
-By default, the device
-.B /dev/ik0l
-is assumed.
-This may be changed by setting the environment
+The environment
 variable
 .B
 .SM FB_FILE
-to the name of another device or file name
-and exporting it before execution of 
-.IR fbclear\^ .
+is used to select the display device (see
+.IR brlcad (1)).
+If this variable is not set, the default device for your system will
+be used.
 If the
 .B \-h
-option is used, the
+option is used on those devices where it makes a difference (e.g. Adage),
+the
 .SM
 .B HIRES
 (1024x1024x24) memory is cleared; otherwise a
@@ -34,13 +28,22 @@ option is used, the
 .B LORES
 (512x512x24) device is assumed.
 If the optional color values are given,
-.B fbclear
+.I fbclear
 writes the specified color over the entire
 image.
 The color values must be in the range 0 to 255.
-.SH FILE
-/vld/lib/libfb.a
+.SH "SEE ALSO"
+brlcad(1), fbcmap(1)
 .SH AUTHORS
-Gary S. Moss, BRL-VLD
+Gary S. Moss
 .br
-Michael John Muuss, BRL-SECAD
+Michael John Muuss
+.SH SOURCE
+SECAD/VLD Computing Consortium, Bldg 394
+.br
+The U. S. Army Ballistic Research Laboratory
+.br
+Aberdeen Proving Ground, Maryland  21005
+.SH "BUG REPORTS"
+Reports of bugs or problems should be submitted via electronic
+mail to <CAD@BRL.ARPA>.
