--- a/fb/fbzoom.1
+++ b/fb/fbzoom.1
@@ -1,45 +1,84 @@
-.TH FBZOOM 1V VMB
-'\"	last edit:	85/04/22	G. S. Moss
-'\"	SCCS ID:	@(#)fbzoom.1	1.2
+.TH FBZOOM 1 BRL/CAD
 .SH NAME
 fbzoom \- enlarge a frame buffer image
 .SH SYNOPSIS
 .B fbzoom
-[
-.B \-h
-]
+.RB [ \-h ]
 .SH DESCRIPTION
 .I Fbzoom\^
 is used to
 zoom-in
 on a frame buffer image by enlarging each pixel and windowing in on
 a portion of the image.
-By default, the device
-.B /dev/ik0l
-is assumed.
-This may be changed by setting the environment
+The environment
 variable
 .B
 .SM FB_FILE
-to the name of another device or file name
-and exporting it before execution of 
-.IR fbzoom\^ .
-If the
+is used to select the display device (see
+.IR brlcad (1)).
+If this variable is not set, the default device for your system will
+be used.
+.PP
+The 
+.RB `` h '',
+.RB `` j '',
+.RB `` k '',
+and
+.RB `` l '',
+commands step the center of view one pixel left, down, up, or right respectively, and
+the 
+.RB `` H '',
+.RB `` J '',
+.RB `` K '',
+and
+.RB `` L '',
+commands step the center of view in the corresponding direction in big increments.
+The
+.RB `` B '',
+.RB `` N  '',
+.RB `` P ''.
+and
+.RB `` L '',
+and
+.RB `` ^B '',
+(control-B),
+.RB `` ^N '',
+.RB `` ^P '',
+and
+.RB `` ^F '',
+are also little and big (respectively) center of view movement commands.
+.PP
+A
+.RB `` ? ''
+prints a short command summary,
+and typing
+.RB `` q '',
+or
+.RB `` Q '',
+exits the program.
+.PP
+The
 .B \-h
-option is used, a
-.SM
-.B HIRES
-(1024x1024x24) device is used;
-otherwise a
-.SM
-.B LORES
-(512x512x24) device is assumed.
-Commands for manipulating the display are documented on-line.
-.SH FILE
-/vld/lib/libfb.a
+flag causes the frame buffer to be
+used in high resolution mode (1024x1024).
+This is important for frame buffers such as the Adage which operate
+differently depending on the display size.  Without this flag
+the default size for the selected device will be used (usually
+the entire screen).
+.SH "SEE ALSO"
+brlcad(1)
 .SH AUTHORS
-Gary S. Moss, BRL-VLD
+Gary S. Moss
 .br
-Michael John Muuss, BRL-SECAD
+Michael John Muuss
 .br
-J. Robert Suckling, BRL-VLD
+J. Robert Suckling
+.SH SOURCE
+SECAD/VLD Computing Consortium, Bldg 394
+.br
+The U. S. Army Ballistic Research Laboratory
+.br
+Aberdeen Proving Ground, Maryland  21005
+.SH "BUG REPORTS"
+Reports of bugs or problems should be submitted via electronic
+mail to <CAD@BRL.ARPA>.
